--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,1 @@
-I like eating but my stomach hurts and mushrooms are gross bc they are mushy/chewy. bleh
+I like eating but my stomach hurts and mushrooms are gross bc they are mushy/chewy. bleh.
