--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,7 @@
 I like eating but my stomach hurts and mushrooms are gross bc they are mushy/chewy. bleh.
+
+<html>
+  <head>
+    <title>About Me</title>
+  </head>
+</html>
