--- a/aboutme.html
+++ b/aboutme.html
@@ -4,4 +4,10 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
   <head>
     <title>About Me</title>
   </head>
+  
+  <body>
+    <h1>Hello</h1>
+    <p>Same. I second Arushis paragraph.</p>
+    <img src="http://i.imgur.com/AcT9YIL.jpg"></img>
+  </body>
 </html>
