--- a/aboutme.html
+++ b/aboutme.html
@@ -10,4 +10,13 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
     <p>Same. I second Arushis paragraph.</p>
     <img src="http://i.imgur.com/AcT9YIL.jpg"></img>
   </body>
+
+  <style>
+    body {
+      background-color:c2f0f0;
+    }
+    h1 {
+      color:blue;
+    }
+  </style>
 </html>
