--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
       background-color:c2f0f0;
     }
     h1 {
-      color:c80bfff;
+      color:#80bfff;
     }
   </style>
 </html>
