--- a/aboutme.html
+++ b/aboutme.html
@@ -14,9 +14,13 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
   <style>
     body {
       background-color:c2f0f0;
+      font-family:Helvetica;
     }
     h1 {
       color:c80bfff;
+    }
+    img {
+    border: 10px solid aliceblue;
     }
   </style>
 </html>
