--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
       color:c80bfff;
     }
     img {
-    border: 10px solid aliceblue;
+    border: 10px solic aliceblue;
     }
   </style>
 </html>
