--- a/aboutme.html
+++ b/aboutme.html
@@ -13,14 +13,14 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
 
   <style>
     body {
-      background-color:c2f0f0;
-      font-family:Helvetica;
+      background-color: c2f0f0;
+      font-family: Helvetica;
     }
     h1 {
-      color:c80bfff;
+      color: 80bfff;
     }
     img {
-    border: 10px solic aliceblue;
+    border: 10px solid aliceblue;
     }
   </style>
 </html>
