--- a/aboutme.html
+++ b/aboutme.html
@@ -17,10 +17,10 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
       font-family: Helvetica;
     }
     h1 {
-      color: 80bfff;
+      color:80bfff;
     }
     img {
-    border: 10px solid aliceblue;
+    border: 10px solid 80bfff;
     }
   </style>
 </html>
