--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
       color:80bfff;
     }
     img {
-    border: 10px solid 80bfff;
+    border: 10px solid e6f2ff;
     }
   </style>
 </html>
