--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
   <body>
     <h1>Hello</h1>
     <p>Same. I second Arushis paragraph.</p>
-    <img src="https://s-media-cache-ak0.pinimg.com/736x/1d/b1/9c/1db19c584df4d58d4dc04ba7ee80dab1--chubby-cheeks-fat-animals.jpg"></img>
+    <img src="https://s-media-cache-ak0.pinimg.com/736x/1d/b1/9c/1db19c584df4d58d4dc04ba7ee80dab1--chubby-cheeks-fat-animals.jpg" width"104" height="142"></img>
   </body>
 
   <style>
