--- a/aboutme.html
+++ b/aboutme.html
@@ -21,6 +21,7 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
     }
     img {
     border: 10px solid #e6f2ff;
+    text-align: center;
     }
   </style>
 </html>
