--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,10 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
     }
     img {
     border: 10px solid #e6f2ff;
-    text-align: center;
+    display: block;
+    margin: auto;
+    width: 40%;
+    style="float:right;width:42px;height:42px;">
     }
   </style>
 </html>
