--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,7 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
     body {
       background-color: c2f0f0;
       font-family: Helvetica;
+      text-align: center;
     }
     h1 {
       color:80bfff;
