--- a/aboutme.html
+++ b/aboutme.html
@@ -6,10 +6,11 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
   </head>
   
   <body>
-    <h1>Hello</h1>
-    <p>Same. I second Arushis paragraph.</p>
+    <h1>Hello, I'm Afrida</h1>
+    <p>My favorite color is yellow. It reminds me of the summer (which isn't my favorite season because it reminds me of Sundays.) I am 17 years old. I like eating.</p>
     <img src="https://s-media-cache-ak0.pinimg.com/736x/1d/b1/9c/1db19c584df4d58d4dc04ba7ee80dab1--chubby-cheeks-fat-animals.jpg" width"400" height="600"></img>
   </body>
+
 
   <style>
     body {
