--- a/aboutme.html
+++ b/aboutme.html
@@ -7,14 +7,20 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
   
   <body>
     <h1>Hello, I'm Afrida</h1>
-    <p>My favorite color is yellow. It reminds me of the summer (which isn't my favorite season because it reminds me of Sundays.) I am 17 years old. I like eating.</p>
+    <p>I'm 17 and I go to Jericho High School. </p>
     <img src="https://s-media-cache-ak0.pinimg.com/736x/1d/b1/9c/1db19c584df4d58d4dc04ba7ee80dab1--chubby-cheeks-fat-animals.jpg" width"400" height="600"></img>
   </body>
 
+  <body>
+    <h2>Likes</h2>
+     <p>My favorite color is yellow. It reminds me of the summer (which isn't my favorite season because it reminds me of Sundays.) I am 17 years old. I like eating.</p>
+    <h3>Dislikes</h3>
+    <p>Mushrooms. Okra.</p>
+  </body>
 
   <style>
     body {
-      background-color: c2f0f0;
+      background-color:ffff99;
       font-family: Helvetica;
       text-align: center;
     }
@@ -27,6 +33,24 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
     margin: auto;
     width: 30%;
     style="float:right;width:42px;height:42px;">
+    }
+    h2 {
+      color:c2f0f0;
+      .right {
+    float: right;
+    width: 300px;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
+    }
+    h3 {
+      color:c2f0f0;
+      .left {
+    float: right;
+    width: 300px;
+    border: 3px solid #73AD21;
+    padding: 10px;
+}
     }
   </style>
 </html>
