--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
 
   <style>
     body {
-      background-color:ffff99;
+      background-color:99ddff;
       font-family: Helvetica;
       text-align: center;
     }
@@ -35,7 +35,7 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
     style="float:right;width:42px;height:42px;">
     }
     h2 {
-      color:c2f0f0;
+      color:ffff99;
       .right {
     float: right;
     width: 300px;
@@ -43,14 +43,20 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
     padding: 10px;
 }
     }
+    p {
+      color:ffff99;
+    }
     h3 {
-      color:c2f0f0;
+      color:ffff99;
       .left {
     float: right;
     width: 300px;
     border: 3px solid #73AD21;
     padding: 10px;
 }
+    }
+    p {
+      color:ffff99;
     }
   </style>
 </html>
