--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,4 @@
-I like eating but my stomach hurts and mushrooms are gross bc they are mushy/chewy. bleh.
+<p>I like eating but my stomach hurts and mushrooms are gross bc they are mushy/chewy. bleh.</p>
 
 <html>
   <head>
@@ -13,9 +13,9 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
 
   <body>
     <h2>Likes</h2>
-     <p>My favorite color is yellow. It reminds me of the summer (which isn't my favorite season because it reminds me of Sundays.) I am 17 years old. I like eating.</p>
+     <p1>My favorite color is yellow. It reminds me of the summer (which isn't my favorite season because it reminds me of Sundays.) I am 17 years old. I like eating.</p>
     <h3>Dislikes</h3>
-    <p>Mushrooms. Okra.</p>
+    <p2>Mushrooms. Okra.</p>
   </body>
 
   <style>
@@ -43,19 +43,19 @@ I like eating but my stomach hurts and mushrooms are gross bc they are mushy/che
     padding: 10px;
 }
     }
-    p {
+    p1 {
       color:ffff99;
     }
     h3 {
       color:ffff99;
       .left {
-    float: right;
+    float: left;
     width: 300px;
     border: 3px solid #73AD21;
     padding: 10px;
 }
     }
-    p {
+    p2 {
       color:ffff99;
     }
   </style>
