--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
   <style>
     body {
       background-color:99ddff;
-      font-family: Helvetica;
+      font-family: Georgia;
       text-align: center;
     }
     h1 {
