--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
       text-align: center;
     }
     h1 {
-      color:80bfff;
+      color:bb99ff;
     }
     img {
     border: 10px solid #e6f2ff;
