--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 
   <body>
     <h2>Likes</h2>
-     <p1>My favorite color is yellow. It reminds me of the summer (which isn't my favorite season because it reminds me of Sundays.) I am 17 years old. I like eating.</p>
+     <p1>My favorite color is yellow. It reminds me of the summer (which isn't my favorite season because it reminds me of Sundays). I like eating.</p>
     <h3>Dislikes</h3>
     <p2>Mushrooms. Okra.</p>
   </body>
