--- a/aboutme.html
+++ b/aboutme.html
@@ -25,7 +25,7 @@
       text-align: center;
     }
     h1 {
-      color:bb99ff;
+      color:ffff99;
     }
     img {
     border: 10px solid #e6f2ff;
