--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
 
   <style>
     body {
-      background-color:99ddff;
+      background-color:4dc3ff;
       font-family: Georgia;
       text-align: center;
     }
