--- a/aboutme.html
+++ b/aboutme.html
@@ -23,6 +23,7 @@
       background-color:4dc3ff;
       font-family: Georgia;
       text-align: center;
+      font-color:ffff99;
     }
     h1 {
       color:ffff99;
