--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
       color:ffff99;
     }
     img {
-    border: 10px solid #e6f2ff;
+    border: 10px solid #ffff99;
     display: block;
     margin: auto;
     width: 30%;
