--- a/aboutme.html
+++ b/aboutme.html
@@ -13,9 +13,9 @@
 
   <body>
     <h2>Likes</h2>
-     <p1>My favorite color is yellow because it reminds me of the sun. I like eating. I also like music.<br>I love watching movies, especially with my 11th grade lunch squad. However, I hate alien movies, but more on that later.</p1>
+     <h5>My favorite color is yellow because it reminds me of the sun. I like eating. I also like music.<br>I love watching movies, especially with my 11th grade lunch squad. However, I hate alien movies, but more on that later.</h5>
     <h2>Dislikes</h2>
-    <p1>Alien movies with human ladies giving birth to an octopus alien baby are the worst. Also mushrooms. And okra. <br> When I have dry skin. The SATs. Also probably the ACT. Headaches. When my sister borrows my clothing and "forgets" to return it. <br> Not having any charger available at my house (how is it possible to lose so many chargers???). Being late, although that is a family tradition. When I get really comfortable in bed and am in the perfect position to sleep but realize that I have to pee.</p1>
+    <h5>Alien movies with human ladies giving birth to an octopus alien baby are the worst. Also mushrooms. And okra. <br> When I have dry skin. The SATs. Also probably the ACT. Headaches. When my sister borrows my clothing and "forgets" to return it. <br> Not having any charger available at my house (how is it possible to lose so many chargers???). Being late, although that is a family tradition. When I get really comfortable in bed and am in the perfect position to sleep but realize that I have to pee.</h5>
   </body>
 
   <style>
@@ -43,7 +43,7 @@
     padding: 10px;
 }
     }
-    p1 {
+    h5 {
       color:ffff99;
     }
     h2 {
@@ -55,7 +55,7 @@
     padding: 10px;
 }
     }
-    p1 {
+    h5 {
       color:ffff99;
     }
   </style>
