--- a/aboutme.html
+++ b/aboutme.html
@@ -1,5 +1,3 @@
-<p>I like eating but my stomach hurts and mushrooms are gross bc they are mushy/chewy. bleh.</p>
-
 <html>
   <head>
     <title>About Me</title>
@@ -7,7 +5,7 @@
   
   <body>
     <h1>Hello, I'm Afrida</h1>
-    <p>I'm 17 and I go to Jericho High School. </p>
+    <p>I'm 17 and I go to Jericho High School.<br><del>Really I'm just a young, dumb and broke high school kid.</del><br>I like eating but my stomach hurts and mushrooms are gross bc they are mushy/chewy. bleh.</p>
     <img src="https://s-media-cache-ak0.pinimg.com/736x/1d/b1/9c/1db19c584df4d58d4dc04ba7ee80dab1--chubby-cheeks-fat-animals.jpg" width"400" height="600"></img>
   </body>
 
