--- a/aboutme.html
+++ b/aboutme.html
@@ -22,6 +22,9 @@
       font-family: Georgia;
       text-align: center;
     }
+    p {
+      color:ffff99; 
+    }
     h1 {
       color:ffff99;
     }
