--- a/aboutme.html
+++ b/aboutme.html
@@ -38,11 +38,9 @@
     }
     h2 {
       color:ffff99;
-      .right {
-    float: right;
-    width: 300px;
-    border: 3px solid #73AD21;
-    padding: 10px;
+      float: left;
+      max-width: 160px;
+      margin: 0;
 }
     }
     p1 {
@@ -50,11 +48,9 @@
     }
     h2 {
       color:ffff99;
-      .left {
-    float: left;
-    width: 300px;
-    border: 3px solid #73AD21;
-    padding: 10px;
+      float: right;
+      max-width: 160px;
+      margin: 0;
 }
     }
     p1 {
