--- a/aboutme.html
+++ b/aboutme.html
@@ -45,6 +45,9 @@
     }
     p1 {
       color:ffff99;
+      float: left;
+      max-width: 160px;
+      margin: 0;
     }
     h2 {
       color:ffff99;
@@ -55,6 +58,9 @@
     }
     p1 {
       color:ffff99;
+      float: right;
+      max-width: 160px;
+      margin: 0;
     }
   </style>
 </html>
