--- a/aboutme.html
+++ b/aboutme.html
@@ -23,9 +23,11 @@
       font-family: Georgia;
       text-align: center;
     }
+   
     p {
       color:ffff99; 
     }
+   
     h1 {
       color:ffff99;
     }
@@ -38,29 +40,31 @@
     }
     h2 {
       color:ffff99;
-      float: left;
-      max-width: 160px;
-      margin: 0;
+      clear: left;
 }
     }
+   
     p1 {
       color:ffff99;
-      float: left;
-      max-width: 160px;
-      margin: 0;
+       float: left;
+      width: 100px;
+      height: 50px;
+      margin: 10px;
     }
+   
     h2 {
       color:ffff99;
-      float: right;
-      max-width: 160px;
-      margin: 0;
+      clear: right;
 }
     }
+   
     p1 {
       color:ffff99;
       float: right;
-      max-width: 160px;
-      margin: 0;
+      width: 100px;
+      height: 50px;
+      margin: 10px;
+      clear: right;
     }
   </style>
 </html>
