--- a/aboutme.html
+++ b/aboutme.html
@@ -30,6 +30,7 @@
    
     h1 {
       color:ffff99;
+   
     }
     img {
     border: 10px solid #ffff99;
@@ -40,17 +41,21 @@
     }
     h2 {
       color:ffff99;
+      text-align: left;
     }
    
     p1 {
       color:ffff99;
+      text-align: left;
       
     h2 {
       color:ffff99;
+      text-align: right;
     }
    
     p1 {
       color:ffff99;
+      text-align: right;
     
     }
   </style>
