--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
   </body>
 
   <body>
-    <img src="https://mail.google.com/mail/u/0/?ui=2&ik=984c86663b&view=att&th=15d9a3a10d689fc9&attid=0.1&disp=safe&zw" width"400" height="500"></img>
+    <img src="file:///Users/gwcstudent/Desktop/IMG_0091%20(1).PNG" width"400" height="500"></img>
   </body>
 
   <style>
