--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@
   </body>
 
   <body>
-    <img src="file:///Users/gwcstudent/Desktop/IMG_0091%20(1).PNG" width"400" height="500"></img>
+    <img src="file:///Users/gwcstudent/Desktop/IMG_0091%20(1).PNG"></img>
   </body>
 
   <style>
