--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,7 @@
   </head>
   
   <body>
-    <h1>Hello, I'm Afrida</h1>
-      <font onmouseover="this.color='red';" onmouseout="this.color='blacḱ';">Text1</font>
+    <h1><font onmouseover="this.color='black';" onmouseout="this.color='ffff99';">Hello, I'm Afrida</font></h1>
     <p>I'm 17 and I go to Jericho High School.<br><del>I like eating but my stomach hurts and mushrooms are gross bc they are mushy/chewy. bleh.</del>
     <br>(Also this isn't my cat but I love cats and this one is blessing you with its presence)</p>
     <img src="https://s-media-cache-ak0.pinimg.com/736x/1d/b1/9c/1db19c584df4d58d4dc04ba7ee80dab1--chubby-cheeks-fat-animals.jpg" width"400" height="600"></img>
