--- a/aboutme.html
+++ b/aboutme.html
@@ -64,3 +64,6 @@
       
   </style>
 </html>
+
+
+<!--to do: Change the click me button. idk how but figure it out. fix the bottom picture. make life--> 
